<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.dacol.marco.mancala.statisticsUI.StatisticsFragment"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:baselineAligned="false"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/text_view_horizontal_margin"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/statistics_action_bar_title"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:layout_weight="1"
            />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:columnCount="3"
            android:rowCount="6"
            android:layout_weight="4"
            android:layout_gravity="center">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="@dimen/statistics_font_size_title"
                    android:textStyle="bold"
                    android:text="@string/title_HvH_games_stats"
                    android:src="@drawable/hvh_game"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_margin="@dimen/table_view_margin"
                    android:layout_gravity="center"
                    />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="@dimen/statistics_font_size_title"
                    android:textStyle="bold"
                    android:text="@string/title_HvC_games_stats"
                    android:src="@drawable/hvc_game"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:layout_margin="@dimen/table_view_margin"
                    android:layout_gravity="center"
                    />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/text_view_horizontal_margin"
                    android:layout_marginEnd="@dimen/text_view_horizontal_margin"
                    android:textSize="@dimen/statistics_font_size"
                    android:text="@string/played_games"
                    android:src="@drawable/played_games"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:layout_margin="@dimen/table_view_margin"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/played_games_HvH_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/statistics_font_size"
                    tools:text="0"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/played_games_HvC_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/statistics_font_size"
                    tools:text="0"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:layout_gravity="center"
                    />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/text_view_horizontal_margin"
                    android:layout_marginEnd="@dimen/text_view_horizontal_margin"
                    android:textSize="@dimen/statistics_font_size"
                    android:text="@string/best_score"
                    android:src="@drawable/best_score"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:layout_margin="@dimen/table_view_margin"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/best_score_HvH_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/statistics_font_size"
                    tools:text="0"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/best_score_HvC_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/statistics_font_size"
                    tools:text="0"
                    android:layout_column="2"
                    android:layout_row="2"
                    android:layout_gravity="center"
                    />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/text_view_horizontal_margin"
                    android:layout_marginEnd="@dimen/text_view_horizontal_margin"
                    android:textSize="@dimen/statistics_font_size"
                    android:text="@string/win_games"
                    android:src="@drawable/win"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:layout_margin="@dimen/table_view_margin"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/win_games_HvH_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/statistics_font_size"
                    tools:text="0"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/win_games_HvC_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/statistics_font_size"
                    tools:text="0"
                    android:layout_column="2"
                    android:layout_row="3"
                    android:layout_gravity="center"
                    />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/text_view_horizontal_margin"
                    android:layout_marginEnd="@dimen/text_view_horizontal_margin"
                    android:textSize="@dimen/statistics_font_size"
                    android:text="@string/even_games"
                    android:src="@drawable/even"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:layout_margin="@dimen/table_view_margin"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/even_games_HvH_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/statistics_font_size"
                    tools:text="0"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/even_games_HvC_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/statistics_font_size"
                    tools:text="0"
                    android:layout_column="2"
                    android:layout_row="4"
                    android:layout_gravity="center"
                    />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/text_view_horizontal_margin"
                    android:layout_marginEnd="@dimen/text_view_horizontal_margin"
                    android:textSize="@dimen/statistics_font_size"
                    android:text="@string/lose_games"
                    android:src="@drawable/lose"
                    android:layout_column="0"
                    android:layout_row="5"
                    android:layout_margin="@dimen/table_view_margin"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/lose_games_HvH_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/statistics_font_size"
                    tools:text="0"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/lose_games_HvC_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/statistics_font_size"
                    tools:text="0"
                    android:layout_column="2"
                    android:layout_row="5"
                    android:layout_gravity="center"
                    />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/statistics_font_size_title"
                android:textStyle="bold"
                android:text="@string/title_last_played_games"
                />
            <ListView
                android:id="@+id/last_game_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                >

            </ListView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
