<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/abc_control_padding_material"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_view_horizontal_margin"
                android:layout_marginEnd="@dimen/text_view_horizontal_margin"
                android:textSize="@dimen/statistics_font_size"
                android:text="@string/list_game_type"
                />
            <TextView
                android:id="@+id/list_item_game_type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/statistics_font_size"
                tools:text="HvH"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_view_horizontal_margin"
                android:layout_marginEnd="@dimen/text_view_horizontal_margin"
                android:textSize="@dimen/statistics_font_size"
                android:text="@string/list_player_points"
                />
            <TextView
                android:id="@+id/list_item_player_points_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/statistics_font_size"
                tools:text="3"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_view_horizontal_margin"
                android:layout_marginEnd="@dimen/text_view_horizontal_margin"
                android:textSize="@dimen/statistics_font_size"
                android:text="@string/list_opponent_points"
                />
            <TextView
                android:id="@+id/list_item_opponent_points_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/statistics_font_size"
                tools:text="33"
                />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/list_item_win_lose_image_view"
        android:layout_width="@dimen/abc_action_button_min_height_material"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:layout_weight="1"
        android:layout_gravity="center"
        tools:src="@drawable/win"
        />

</LinearLayout>